<resources>
    <string name="app_name">MidTerm</string>
    <string name="email_label">Email :</string>
    <string name="hint_email">Enter your Email here.....</string>
    <string name="password_label">Password :</string>
    <string name="hint_password">Enter your Password here......</string>
    <string name="submit">Submit :</string>
    <string name="toast_message">You submitted: %1$s, %2$s, %3$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>